# codec_transform

./: Dockerfile  Makefile  pyproject.toml
conf/: codec-conf.xml
k8s/: codec-configmap.yaml  codec-deploy.yaml
src/: CodecServer.py
src/api/: APIRouter.py  __init__.py
src/common/: ConfigManager.py  Constant.py  LoggerManager.py
src/core/: CodecProcessor.py
src/core/codec/: Base64Transformer.py  Base64UrlTransformer.py  BaseTransformer.py  HexTransformer.py  HtmlEntityTransformer.py  OctalTransformer.py  UnicodeTransformer.py  UrlTransformer.py  XmlEntityTransformer.py
src/models/: CodecRequest.py
src/utils/: ConfigUtils.py  FileUtils.py  Singleton.py  TimeUtil.py  XMLUtils.py  __init__.py
src/utils/logger/: MPLogHandler.py  MPLogger.py
